Closed
Bug 265536
Opened 21 years ago
Closed 21 years ago
PFS returns x86 plugin for AMD64 browser
Categories
(Core :: Networking: HTTP, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: nmiell, Assigned: jst)
References
Details
(Keywords: fixed-aviary1.0.5, fixed1.7.9, Whiteboard: need branch landing)
Attachments
(2 files)
|
1.50 KB,
patch
|
jst
:
review+
darin.moz
:
superreview+
shaver
:
approval-aviary1.0.5+
jay
:
approval1.7.9+
|
Details | Diff | Splinter Review |
|
1.76 KB,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux x86_64; rv:1.7.3) Gecko/20041020 Firefox/0.10.1
Build Identifier: Mozilla/5.0 (X11; U; Linux x86_64; rv:1.7.3) Gecko/20041020 Firefox/0.10.1
The Plugin Finder Service ignores the architecture that the end user is using,
and returns inappropriate plugins because of this.
i.e. on a page which has a Flash object, the PFS finds Macromedia Flash for
Linux, despite the fact that Flash for Linux is only available for x86, not x86-64.
Attempting to intall it fails (obviously).
Reproducible: Always
Steps to Reproduce:
1. Use Firefox on Linux AMD64.
2. Find a page with a Flash object.
3. Use the PFS.
Actual Results:
PFS suggests an x86 plugin.
Expected Results:
PFS correctly deduces that no plugin is available.
| Assignee | ||
Comment 1•21 years ago
|
||
Yes, known problem. The problem is that we can't distinguish between those who
run a 32-bit version of Firefox and those who run a 64-bit version, and we don't
want to not give out the 32-bit flash player to the users that can use it. Users
of 64-bit versions of Firefox (including me) simply don't get a usable flash
player, which just doesn't work (doesn't crash the browser). Once one is
available, it'd be great if we could feed the right thing, but I doubt this will
change for Firefox 1.0.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 2•21 years ago
|
||
*** Bug 269496 has been marked as a duplicate of this bug. ***
Comment 3•21 years ago
|
||
Apparently, it also does get the i386 flash plugin on alpha:
p2@fred:~/.firefox/plugins$ file libflashplayer.so
libflashplayer.so: ELF 32-bit LSB shared object, Intel 80386, version 1 (SYSV),
stripped
p2@fred:~/.firefox/plugins$ uname -a
p2-mate Linux fred 2.6.3 #6 Tue Jun 22 16:52:10 CEST 2004 alpha GNU/Linux
[note that the test on alpha is courtesy of Peter De Schrijver]
Comment 4•21 years ago
|
||
Gets the Linux/x86 plugin on Linux/PowerPC also. Reports install successful...
There is currently no Linux/PowerPC Flash binary.
David
dbelan2@cs.mcgill.ca: that should be a different bug (which i believe is filed)
Comment 6•21 years ago
|
||
*** Bug 284313 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 7•21 years ago
|
||
I changed the service to only offer the flash installer to Linux i<n>86 systems.
| Assignee | ||
Comment 8•21 years ago
|
||
Assignee: doronr → jst
Status: NEW → ASSIGNED
Attachment #176092 -
Flags: superreview?(darin)
Attachment #176092 -
Flags: review?(bzbarsky)
Comment 9•21 years ago
|
||
Would this something we would want for a Firefox 1.0.2?
Comment 10•21 years ago
|
||
Comment on attachment 176092 [details] [diff] [review]
Make the UA string tell 32 and 64 bit apps appart on x86_64.
r=bzbarsky
Attachment #176092 -
Flags: review?(bzbarsky) → review+
Comment 11•21 years ago
|
||
Comment on attachment 176092 [details] [diff] [review]
Make the UA string tell 32 and 64 bit apps appart on x86_64.
I think you should test sizeof(void*) instead since that's really what you
mean. I can imagine some funky configuration where long is still 32-bits.
sr=darin
Attachment #176092 -
Flags: superreview?(darin) → superreview+
| Assignee | ||
Comment 12•21 years ago
|
||
Made that change and landed this. FIXED.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 13•21 years ago
|
||
Yeah, IMO we should take this if we do a 1.0.2.
Flags: blocking-aviary1.0.2?
Comment 14•21 years ago
|
||
Ought to be fixed, but not blocking 1.0.3
Flags: blocking-aviary1.0.4?
Flags: blocking-aviary1.0.3?
Flags: blocking-aviary1.0.3-
Updated•20 years ago
|
Attachment #176092 -
Flags: approval-aviary1.0.5?
Updated•20 years ago
|
Flags: blocking-aviary1.0.5? → blocking-aviary1.0.5+
Whiteboard: has reviewed patch
Comment 15•20 years ago
|
||
Comment on attachment 176092 [details] [diff] [review]
Make the UA string tell 32 and 64 bit apps appart on x86_64.
a=shaver. (As a Linux/x86-64 user, I hate this bug.)
That comment doesn't make sense, though: the (x86_64) doesn't distinguish from
the 64-on-64 case, it's the i686 that does so, no?
Attachment #176092 -
Flags: approval-aviary1.0.5? → approval-aviary1.0.5+
Comment 16•20 years ago
|
||
Probably wouldn't actually hold for this, please land soon.
Whiteboard: has reviewed patch → need branch landing
| Assignee | ||
Comment 17•20 years ago
|
||
| Assignee | ||
Updated•20 years ago
|
Keywords: fixed-aviary1.0.5
| Assignee | ||
Comment 18•20 years ago
|
||
Moving bug to Core/http since this changes the UA string and should also be
fixed for 1.7...
Component: Plugin Finder Service → Networking: HTTP
Flags: review+
Product: Firefox → Core
Version: unspecified → 1.0 Branch
| Assignee | ||
Updated•20 years ago
|
Attachment #176092 -
Flags: review+
Attachment #176092 -
Flags: approval1.7.9?
Comment 19•20 years ago
|
||
Comment on attachment 176092 [details] [diff] [review]
Make the UA string tell 32 and 64 bit apps appart on x86_64.
Let's get this in for 1.7.9 while we're at it. a=jay
Attachment #176092 -
Flags: approval1.7.9? → approval1.7.9+
You need to log in
before you can comment on or make changes to this bug.
Description
•