Fixing the browser side of bug 265536. Make the user agent string differentiate between 32-bit and 64-bit version of mozilla when running on x86_64 unix systems. r=bzbarsky@mit.edu, sr=darin@meer.net